[gd_scene load_steps=5 format=3 uid="uid://cfa7lcbrgv3to"]

[ext_resource type="Script" path="res://src/ui/pick_option.gd" id="1_0tf8x"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_2jxhf"]
[ext_resource type="Texture2D" uid="uid://b72v1pkg1p6mw" path="res://assets/custom/acorn.png" id="3_25rhx"]
[ext_resource type="PackedScene" uid="uid://cs4xf7kyndygr" path="res://src/ui/tooltip.tscn" id="4_6ar5m"]

[node name="PickOption" type="Node2D"]
script = ExtResource("1_0tf8x")

[node name="Center" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_2jxhf")

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Prompt text"
horizontal_alignment = 1

[node name="RerollButton" type="Button" parent="Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Reroll "
icon = ExtResource("3_25rhx")
icon_alignment = 2

[node name="HBox" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="SkipButton" type="Button" parent="Center/Panel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Skip"

[node name="Tooltip" parent="." instance=ExtResource("4_6ar5m")]
visible = false

[connection signal="pressed" from="Center/Panel/VBox/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/SkipButton" to="." method="_on_skip_button_pressed"]
